--- a/Shop_QuanAo/Shop_QuanAo/Views/GioHang/Index.cshtml
+++ b/Shop_QuanAo/Shop_QuanAo/Views/GioHang/Index.cshtml
@@ -7,7 +7,16 @@
 
 
 <div class="container">
-    <h2>Giỏ Hàng</h2>
+    <div class="row">
+        <div class="col-9">
+            <h2>Giỏ Hàng</h2>
+        </div>
+        <div class="col-3">
+            <a href="@Url.Action("OrderHistory", "GioHang")" class="btn btn-primary">Xem lịch sử đơn hàng</a>
+        </div>
+    </div>
+    
+    
     <form action="@Url.Action("Checkout", "GioHang")" method="post">
         <table class="table table-bordered">
             <thead>
@@ -26,14 +35,9 @@
                 {
                     <tr>
                         <td>
-                            <input class="item-checkbox"
-                                   type="checkbox"
-                                   name="selectedItems"
-                                   value="@item.MaGioHang"
-                                   data-price="@item.SanPham.Gia"
-                                   data-quantity="@item.SoLuong" />
-                        </td>
+                            <input class="item-checkbox" type="checkbox" name="selectedItems" value="@item.MaGioHang" data-price="@item.SanPham.Gia" data-quantity="@item.SoLuong" />
 
+                        </td>
                         <td>
                             <img src="~/Images/@item.SanPham.HinhAnh" alt="@item.SanPham.TenSanPham" style="width: 50px;" />
                         </td>
@@ -57,6 +61,7 @@
                 }
             </tbody>
         </table>
+
         <br /><br /><br /><br /><br />
         <div class="row">
             <div class="col-md-2">
@@ -66,12 +71,12 @@
                 <h4 id="totalPrice">0 VNĐ</h4>
             </div>
         </div>
-        <br /><br /><br />
 
+        <br /><br /><br />
         <button type="submit" class="btn btn-success">Thanh toán</button>
         <a class="btn btn-info" href="/Sanpham/index">Tiếp tục Mua </a>
-        <br /><br /><br /><br /><br /><br /><br /><br />
     </form>
+
 </div>
 
 <script>
